connecting moveBelt